# Agama

./: .gitignore  Makefile  Makefile.local.template
dev/: CMakeLists.txt  orbit_int.cpp
diskgen/: CMakeLists.txt  gas_scm.cpp  gas_scm.h  main.cpp
diskgen/data/: DomainCoord.txt  DomainCoord1.txt  DomainCoord1024.txt  DomainCoord11592.txt  DomainCoord128.txt  DomainCoord13248.txt  DomainCoord16384.txt  DomainCoord32768.txt  DomainCoord67680.txt  DomainCoord81216.txt  SCM.ini  SCM_001.ini  SCM_large.ini  SCM_small.ini
py/: MWpotCylSpline.ini
src/: math_sample.cpp
tests/: example_actions_nbody.cpp
